# nn-gpt

./: .gitignore  .gitigonre  AI_AGENT_SYSTEM_README.md  FINAL_SCHEDULER_REPORT.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MANIFEST.in  README.md  SCHEDULER_IMPLEMENTATION.md  SFT.py  TuneRL_corrected.py  archive_experiment.py  best_model.py  db_interface.py  debug_dataset.py  debug_reward.py  deploy.sh  generate_variants.py  main_rl_ga.py  plot.py  probe_checknn_freeze_vs_unfreeze.py  pyproject.toml  q_table.json  req-no-isolation.txt  req-rag.txt  requirements.txt  requirements_m1.txt  results_summary.json  rl_q_table.json  setup.py  simple_sft_test.py  test.py  test_basic_model.py  test_dataset.py  test_eval.py  test_eval_runtime.py  test_lora_runtime_resume.py  test_masked_layer.py  test_modular_ga.py  test_nneval_runtime.py  (+9 more)
ab/: __init__.py
ab/gpt/: ClassificationEval.py  EvaluateAlteredNNs.py  NNAlterCaption.py  NNAlterCaptionAll.py  NNAlterCaption_8B.py  NNAlterCaption_olympic.py  NNAlterLayer.py  NNAlter_30B_code_qw.py  NNAlter_480B_code_qw.py  NNAlter_7B.py  NNAlter_7B_code.py  NNAlter_7B_code_olymp.py  NNAlter_7B_code_olymp_batch_8.py  NNAlter_7B_delta.py  NNAlter_8B.py  NNAlter_oss.py  NNEval.py  RAG_NNAlter_7b.py  Sft_Rag.py  TuneACCPrediction.py  TuneAccPrediction.py  TuneAccuracyPrediction.py  TuneBackbone.py  TuneHyperparameters.py  TuneNNGen.py  TuneNNGen_1.3B.py  TuneNNGen_1_3B_Classification_Onnx.py  TuneNNGen_1_3B_coda.py  TuneNNGen_1_3B_code.py  TuneNNGen_1_3B_code_.py  TuneNNGen_1_3B_code_ONNX.py  TuneNNGen_1_3B_code_nngpt.py  TuneNNGen_20B_oss.py  TuneNNGen_7B.py  TuneNNGen_7B_Classification.py  TuneNNGen_7B_coda.py  TuneNNGen_7B_code.py  TuneNNGen_7B_code_olympic.py  TuneNNGen_7B_code_olympic__channel_alter.py  TuneNNGen_7B_code_olympic_channel_alter.py  (+30 more)
ab/gpt/agents/: finetuner.py  generator.py  manager.py  predictor.py  run_agent.py  state.py
ab/gpt/brute/: README.md
ab/gpt/brute/Prunning/: batch_spr.py  check_api.py  check_count.py  check_format.py
ab/gpt/brute/ast/: README.md
ab/gpt/brute/ast/mutator/: config.py  (+3 more)
ab/gpt/brute/ea/: README.md
ab/gpt/brute/fract/: AlterNNFN.py  Fractal_fn.py  Fractal_template.py  Generate_variants.py  NNAlterBN.py  NNAlterBackboneNet.py  README.md
ab/gpt/brute/ga/: AlexNet_evolvable.py  README.md  run_evolution.py
ab/gpt/brute/lr/: README.md  __init__.py  const.py  db_interface.py  schedulers.py  stats.py  train_models.py  util.py
ab/gpt/brute/moe4/: AlterHeteroMoE4.py  EvalMoE4.py  NNAlterHeteroMoE4.py
ab/gpt/brute/prune/: batch_spr.py  check_count.py
ab/gpt/brute/trans/: GenerateTransform.py  README.md  SaveTransformDb.py  TransformEval.py  TransformEvalFt.py
ab/gpt/conf/: Conf.py  DeepSpeedSftGrpo.json  config.json  config.py  dataset_meta.json  ds-coder_1.3b.json  r1_distill_qwen_7b.json  test_prompts_chg.json  train_nn_change_prm_prompts.json  train_nn_gen_prompts.json
ab/gpt/conf/llm/: backbone_sft_config.json  ds_coder_1.3b_instruct.json  ds_coder_7b_instruct.json  ds_coder_7b_olympic.json  ds_qwen3_8b.json  gpt_oss_20b.json  nngpt_ds_coder_1.3b_base_r.json  nngpt_ds_coder_1.3b_instruct.json  nngpt_dsr1_distill_qwen_7b_r.json  nngpt_unique_arch_rag.json  r1_distill_qwen_7b.json
ab/gpt/iterative_pipeline/: __init__.py  aggregate_cycles.py  analyze_cycles.py  evaluate_cycle_models.py  gpu_memory_manager.py  novelty_checker.py  pipeline_validation.py  plot_cycles.py  plot_wilson_ci.py  structural_reranker.py  training_data_manager.py
ab/gpt/iterative_prompt_improvement/: code_generator.py  pipeline.py  prompt_improver.py  requirements.txt  requirements_bkp.txt  run.sh
ab/gpt/markov/: Architecture.drawio  README.md  code_extractor.py  code_generator.py  config.py  evaluator.py  llm_client.py  pipeline.py  prompt_improver.py  train_script.py
ab/gpt/util/: AlterCaptionNN.py  AlterCaptionNNOld.py  AlterCaptionNNtune.py  AlterNN.py  ArchDiscovery.py  CVModelEvaluator.py  Chatbot.py  Code.py  Const.py  Const_Onnx.py  CycleResults.py  DatasetCompareBuilder.py  DeltaUtil.py  Eval.py  FineTune.py  LLM.py  LLMUtil.py  LLM_ONNX.py  LoRA.py  LoRATrainer.py  Merge.py  MergeLLM.py  MergeLLM_tmp.py  Mergedecision.py  Metrics.py  ModelLoader.py  ModifyCode.py  NNEval.py  NNLayer.py  OnnxExport.py  OnnxWrapper.py  RAG.py  Reward.py  SFTUtil.py  Testing.py  Tune.py  TuneTransform.py  Tune_Onnx.py  Util.py  Util_Onnx.py  (+19 more)
ab/gpt/util/preprocessors/: CodeChgPrmPromptPreprocessorSFT.py  CodeImprovePromptPreprocessor.py  CodePromptPreprocessor.py  PreprocessorBase.py
ab/gpt/util/prompt/: NNGenPrompt.py  NNPrompt.py  NNRLPrompt.py  Prompt.py  SFTGenPrompt.py  TransformGenPrompt.py
ab/gpt/utils/: data_loader.py  retrieval.py  setup_data.py
base_nn/: AirNet.py  AirNext.py  AlexNet.py  BagNet.py  ComplexNet.py  ConvNeXt.py  ConvNeXtTransformer.py  DPN107.py  DPN131.py  DPN68.py  DarkNet.py  DenseNet.py  Diffuser.py  EfficientNet.py  FCN16s.py  FCN8s.py  GoogLeNet.py  ICNet.py  LRASPP.py  MNASNet.py  MaxVit.py  MoEv2.py  MobileNetV2.py  MobileNetV3.py  RESNETLSTM.py  RegNet.py  ResNet.py  ResNetTransformer.py  SSDLite.py  ShuffleNet.py  SwinTransformer.py  UNet2D.py  VGG.py  VisionTransformer.py
db/: ab.nn.db
results/: ResNet_LR_Scheduler_Experiment.md
results/bleu_run/: all_results.json  trainer_state.json
rl_experiment/: main.py
rl_experiment/core/: llm_interface.py  rl_agent.py  trainer.py
src/agents/: generator.py
update/: Fractal_template.py  Generate_variants.py
(+23463 files in other folders)
