[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'nn-gpt'
dynamic = ['version', 'dependencies', 'optional-dependencies']
description = 'LLM-Based Neural Network Generator'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "LICENSE" }
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
authors = [
    { name = 'ABrain One and contributors', email = 'AI@ABrain.one' }
]

[project.urls]
Homepage = 'https://ABrain.one'
Repository = 'https://github.com/ABrain-One/nn-gpt'

[tool.setuptools.dynamic]
version = { file = 'version' }
dependencies = { file = 'requirements.txt' }
optional-dependencies.no-isolation = { file = 'requirements-no-isolation.txt' }

[tool.setuptools.packages.find]
where = ['']

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'ab' = ['*.py', '*.json', '*.md']
'*' = ['requirements.txt', 'requirements-no-isolation.txt', 'README.md', 'LICENSE', 'version']