[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'nn-gpt'
dynamic = ['version', 'dependencies']
description = 'LLM-Based Neural Network Generator'
long-description = """
NNGPT is a Python package that facilitates the automatic generation of neural network code using large language models. It allows users to define neural network architectures through natural language prompts, which are then converted into executable Python code. This tool aims to streamline the process of neural network design, making it more accessible and efficient.

Key features include:
- Natural language interface for defining neural network architectures.
- Automatic generation of Python code for neural networks.
- Support for various neural network layers and configurations.
- Integration with existing Python machine learning frameworks.

This project is designed to assist researchers and developers in quickly prototyping neural network models by leveraging the capabilities of large language models for code generation.
"""
long-description-content-type = 'text/markdown'

readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "LICENSE" }
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Data Processing',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
]
keywords = ['neural network code generation', 'AI-assisted programming', 'machine learning', 'deep learning', 'Python', 'large language models', 'automated code generation', 'neural network design']
authors = [{ name = 'ABrain One and contributors', email = 'AI@ABrain.one' }]

[project.urls]
Homepage = 'https://ABrain.one'
Repository = 'https://github.com/ABrain-One/nn-gpt'
'Bug Tracker' = 'https://github.com/ABrain-One/nn-gpt/issues'

[tool.setuptools.dynamic]
version = { file = 'version' }
dependencies = { file = ['requirements.txt', 'requirements-no-isolation.txt'] }

[tool.setuptools.packages.find]
where = ['']

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
'*' = ['**/*.json']

[tool.setuptools.package-data]
'ab' = ['*.md']
'*' = ['requirements.txt', 'README.md', 'LICENSE', 'version']

[project.optional-dependencies]
flash = ['flash_attn']
stat = ['nn-stat']
rag = ['nn-rag>=2.0.0']
