[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'nn-gpt'
dynamic = ['version', 'dependencies']
description = 'LLM-Based Neural Network Generator'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "LICENSE" }
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Code Generators',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
]
keywords = ['neural network code generation', 'AI-assisted programming', 'machine learning', 'deep learning', 'Python', 'large language models', 'automated code generation', 'neural network design']
authors = [{ name = 'ABrain One and contributors', email = 'AI@ABrain.one' }]

[project.urls]
Homepage = 'https://ABrain.one'
Repository = 'https://github.com/ABrain-One/nn-gpt'
'Bug Tracker' = 'https://github.com/ABrain-One/nn-gpt/issues'

[tool.setuptools.dynamic]
version = { file = 'version' }
dependencies = { file = ['requirements.txt', 'requirements-no-isolation.txt'] }

[tool.setuptools.packages.find]
where = ['']

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
'*' = ['**/*.json']

[tool.setuptools.package-data]
'ab' = ['*.md']
'*' = ['requirements.txt', 'README.md', 'LICENSE', 'version']

[project.optional-dependencies]
flash = ['flash_attn']
stat = ['nn-stat']
